# atelier

./: .gitignore  AGENTS.md  README.md  atelier-design-doc.md  package.json  tsconfig.json
.beads/: issues.jsonl  metadata.json
src/: index.ts  server.ts
src/analysis/: index.ts  language.ts  ownership.ts  patterns.ts  structure.ts
src/archetypes/: definitions.ts  index.ts  instantiator.ts  selector.ts  types.ts
src/cli/: index.ts  init.ts  scaffold.ts
src/core/: bead-store.ts  bead.ts  organization.ts  persona-registry.ts  persona.ts  session.ts  team.ts
src/curriculum/: index.ts  types.ts
src/generation/: agent-templates.ts  bead-generator.ts  org-generator.ts  persona-generator.ts  team-generator.ts
src/incidents/: index.ts  types.ts
src/memory/: index.ts  store.ts  types.ts
src/review/: diff-context.ts  index.ts  types.ts
src/simulation/: advance-engine.ts  clock.ts  events.ts  progress-slider.ts
src/skills/: index.ts  portfolio.ts  types.ts
src/tools/: advance.ts  bead.ts  curriculum.ts  incident.ts  index.ts  init.ts  memory.ts  org.ts  persona.ts  review.ts  scaffold.ts  session.ts  skill.ts  team.ts
src/util/: chat-log.ts  id.ts  paths.ts  prompt.ts  types.ts  yaml.ts
templates/: org-orchestrator.md.hbs  persona-dm.md.hbs  review-agent.md.hbs  session-context.md.hbs  sub-agent-prompt.hbs  team-orchestrator.md.hbs
test/analysis/: language.test.ts
test/core/: bead-store.test.ts  (+3 more)
test/fixtures/repos/python-ml/: pyproject.toml
test/fixtures/repos/python-ml/src/: model.py  train.py
test/fixtures/repos/python-ml/tests/: test_model.py
(+65 files in other folders)
